# fastiter

./: .gitignore  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  QUICKREF.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: benchmark.py  benchmark_vs_multiprocessing.py
examples/: basic_usage.py
fastiter/: __init__.py  adapters.py  bridge.py  config.py  consumers.py  core.py  producers.py  protocols.py
tests/: __init__.py  test_core.py  test_properties.py
