[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastiter"
version = "0.1.0"
description = "High-performance parallel iterators for Python 3.14+ free-threaded mode"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Robin Hafid Quintero Lopez", email = "rohaquinlop301@gmail.com" }
]
keywords = [
    "parallel",
    "iterators",
    "concurrency",
    "free-threaded",
    "rayon",
    "performance",
    "multithreading"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Symmetric Multi-processing",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.17",
]

[project.urls]
Homepage = "https://github.com/rohaquinlop/fastiter"
Documentation = "https://github.com/rohaquinlop/fastiter#readme"
Repository = "https://github.com/rohaquinlop/fastiter"
Issues = "https://github.com/rohaquinlop/fastiter/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
